--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Lyle W. Konigsberg
 Maintainer: Lyle W. Konigsberg <lylek@illinois.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+VignetteBuilder: knitr
 Imports:
     shape,
     mixtools
